# MeshNetwork

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  dev_run.sh  main.cpp  vcpkg.json
proto/: crypto.proto  envelope.proto  heartbeat.proto  messages.proto  packet.proto  ping.proto  topology.proto
scripts/: gen_certs.py
src/crypto/: CertHelpers.cpp  CryptoHelpers.cpp  CryptoHelpers.h  IdentityManager.cpp  IdentityManager.h  PacketSecurity.cpp  PacketSecurity.h
src/graph/: GraphManager.cpp  GraphManager.h
src/logging/: Logger.cpp  Logger.h
src/mesh/crypto/: CertHelpers.cpp  CertHelpers.h  CryptoHelpers.cpp  IdentityManager.cpp  IdentityManager.h  PacketSecurity.cpp  PacketSecurity.h
src/mesh/graph/: GraphManager.cpp
src/mesh/net/: Session.cpp  Session.h  Stream.cpp  Stream.h
src/mesh/net/udp/: UdpTransport.cpp
src/mesh/node/: MeshNode.cpp  MeshNode.h
src/mesh/proto_types/: EnvelopeUtils.cpp  RoutedPacketUtils.cpp
src/mesh/routing/: MeshRouter.cpp  MeshRouter.h
src/mesh/rpc/: IRpcMessageHandler.h  ITrasportLayer.h  RpcConnection.cpp  RpcConnection.h  RpcManager.cpp  RpcManager.h
src/mesh/rpc/handlers/: HandshakeHandler.cpp  HandshakeHandler.h  HeartbeatHandler.cpp  HeartbeatHandler.h
src/mesh/utils/: FileUtils.h  MessageUtils.cpp  MessageUtils.h  StringUtils.h  ThreadSafeQueue.h
src/messages/: EnvelopeUtils.cpp  EnvelopeUtils.h  RoutedPacketUtils.cpp  RoutedPacketUtils.h
src/net/: IStream.h  Session.cpp  Session.h  Stream.cpp  Stream.h  session.cpp  session.h
src/net/udp/: UdpTransport.cpp  UdpTransport.h
src/node/: MeshNode.cpp  MeshNode.h  mesh_node.cpp  mesh_node.h
src/proto_types/: EnvelopeUtils.cpp  EnvelopeUtils.h  RoutedPacketUtils.cpp  RoutedPacketUtils.h
src/routing/: IMeshNetwork.h  IMessageSink.h  MeshEvents.h  MeshRouter.cpp  MeshRouter.h
src/rpc/: IMessageHandler.h  ITrasportLayer.h  RpcConnection.cpp  RpcConnection.h  RpcLayer.cpp  RpcLayer.h  RpcManager.cpp  RpcManager.h
src/rpc/handlers/: HandshakeHandler.cpp  HandshakeHandler.h  HeartbeatHandler.cpp  HeartbeatHandler.h  TextHandler.cpp  TextHandler.h
src/utils/: AsyncRequestTracker.h  AsyncWriter.h  DedeupSet.h  FileUtils.cpp  StringUtils.cpp  message_utils.cpp  string_utils.cpp
tests/: CMakeLists.txt  test_session.cpp
triplets/: x64-linux-cpp23.cmake
